Fix header links and portfolio spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,8 @@ img {
     letter-spacing: 0.02em;
     color: #2E2F42;
     text-decoration: none;
+    display: inline-block;
+    padding: 24px 0;
 }
 
 .link:hover,
@@ -84,9 +86,11 @@ img {
 }
 
 .address {
+    display: block;     /* або inline-block */
     color: #434455;
     text-decoration: none;
-    font-style:normal;
+    font-style: normal;
+    padding: 24px 0;
 }
 
 .address:hover,
@@ -282,14 +286,11 @@ p {
     border-top: none;
 }
 
-.section-portfolio .list > li h3 {
+.portfolio-info h3 {
     margin-bottom: 8px;
-    margin-top:32px;
-    padding: 0 16px;
 }
 
-.section-portfolio .list > li p {
-    padding: 0 16px 32px;
+.portfolio-info p {
     margin: 0;
 }
 
